--- a/src/css/alice.scss
+++ b/src/css/alice.scss
@@ -213,6 +213,13 @@ div.window {
   overflow-y: scroll;
 }
 
+div.window table {
+  width: 100%;
+  height: 100%;
+  vertical-align: bottom;
+  table-layout: fixed;
+}
+
 div#windows.resizing div.window {
   left: -500px;
   width: 500px;
